--- a/src/views/index/index.less
+++ b/src/views/index/index.less
@@ -3,7 +3,8 @@
     padding-bottom: 14vw;
     // background-color: #F8FCFF;
     position: relative;
-    .head{
+
+    .head {
         width: 100%;
         height: 66px;
         line-height: 66px;
@@ -12,7 +13,8 @@
         position: absolute;
         top: 0;
         z-index: 99;
-        .search_input{
+
+        .search_input {
             // width:70%
             height: 30px;
             border-radius: 30px;
@@ -20,69 +22,82 @@
             line-height: 30px;
             padding: 0 15px;
         }
-        .search_letf{
-           font-size: 24px
+
+        .search_letf {
+            font-size: 24px
         }
-        .search_right{
+
+        .search_right {
             font-size: 24px
         }
 
     }
-    .bp-banner{
+
+    .bp-banner {
         z-index: -1;
         position: relative;
         top: 0px;
         // height: 543px;
         width: 100%;
         min-height: 200px;
+
         // background: #000;
-        img{
+        img {
             width: 100%;
         }
+
         .van-swipe__indicators {
             bottom: 52px
         }
     }
-    .Navbar{
+
+    .Navbar {
         width: 92%;
         // height: 160px;
-        margin:-48px auto 0;
+        margin: -48px auto 0;
         padding-bottom: 15px;
-        border-radius:6px;
+        border-radius: 6px;
         background: #fff;
         box-shadow: 0px 1px 2px 1px #fff3f3;
-        .nav_main{
+
+        .nav_main {
             text-align: center;
-            .img-box{
-                img{
+
+            .img-box {
+                img {
                     width: 40px;
                     height: 40px;
-                    margin:20px 20px 10px;
+                    margin: 20px 20px 10px;
                 }
             }
-            .img-item{
+
+            .img-item {
                 font-size: 12px;
                 color: #000
             }
-            
+
         }
     }
-    .bp-discount{
+
+    .bp-discount {
         width: 92%;
         margin: 10px auto;
-        img{
+
+        img {
             width: 100%;
         }
     }
-    .bp-recommend{
-        
+
+    .bp-recommend {
+
         height: 180px;
         width: 92%;
         margin: 10px auto;
-        .bp-recom-left{
+
+        .bp-recom-left {
             // height: 120px;
-            
-            .bp-recom-main{
+
+            .bp-recom-main {
                 position: relative;
                 width: 94%;
                 height: 180px;
@@ -90,18 +105,21 @@
                 background-size: cover;
                 background-image: url("../../../static/images/rebgletf.png");
                 border-radius: 4px;
+
                 // padding:10px; 
-                .bp-recom-title{
+                .bp-recom-title {
                     color: #ff2735;
                     font-size: 14px;
-                    padding:10px 10px 0;
+                    padding: 10px 10px 0;
                 }
-                .bp-recom-item{
-                    color:#ff5963;
+
+                .bp-recom-item {
+                    color: #ff5963;
                     margin-left: 10px;
                     font-size: 10px;
                 }
-                img{
+
+                img {
                     max-width: 118px;
                     max-height: 118px;
                     position: absolute;
@@ -110,11 +128,14 @@
                     bottom: 20px;
                 }
             }
+
             // background: #000;
         }
-        .bp-recom-right{
+
+        .bp-recom-right {
             height: 180px;
-            .bp-recom-top{
+
+            .bp-recom-top {
                 position: relative;
                 width: 94%;
                 height: 85px;
@@ -122,17 +143,20 @@
                 background-size: cover;
                 background-image: url("../../../static/images/rebgritop.png");
                 border-radius: 4px;
-                .bp-recom-title{
+
+                .bp-recom-title {
                     color: #0052d5;
                     font-size: 14px;
-                    padding:10px 10px 0;
+                    padding: 10px 10px 0;
                 }
-                .bp-recom-item{
-                    color:#156fff;
+
+                .bp-recom-item {
+                    color: #156fff;
                     margin-left: 10px;
                     font-size: 10px;
                 }
-                img{
+
+                img {
                     position: absolute;
                     // width: 40%;
                     // left: 10%;
@@ -142,22 +166,26 @@
                     max-height: 78px;
                 }
             }
-            .bp-recom-buttom{
+
+            .bp-recom-buttom {
                 position: relative;
                 .bp-recom-top;
-                margin-top:10px; 
+                margin-top: 10px;
                 background-image: url("../../../static/images/rebgribt.png");
-                .bp-recom-title{
+
+                .bp-recom-title {
                     color: #8f59ff;
                     font-size: 14px;
-                    padding:10px 10px 0;
+                    padding: 10px 10px 0;
                 }
-                .bp-recom-item{
-                    color:#ccb3ff;
+
+                .bp-recom-item {
+                    color: #ccb3ff;
                     margin-left: 10px;
                     font-size: 10px;
                 }
-                img{
+
+                img {
                     position: absolute;
                     // width: 40%;
                     bottom: 4px;
@@ -166,49 +194,60 @@
                     max-height: 78px;
                 }
             }
+
             // background: #000;
-            
+
         }
     }
-    .bp-recomlist{
-        &-link{
+
+    .bp-recomlist {
+        &-link {
             height: 20px;
-            &-left{
+
+            &-left {
                 float: left;
                 left: 80px;
                 width: 50%;
-                img{
+
+                img {
                     height: 20px;
                 }
             }
-            &-right{
+
+            &-right {
                 float: right;
                 font-size: 14px;
                 margin-right: 10px;
-                span{
+
+                span {
                     position: relative;
                     right: -8px;
                     top: -6px;
                 }
             }
         }
-        &-list{
-            margin:10px auto 0;
+
+        &-list {
+            margin: 10px auto 0;
             width: 94%;
-            &-main{
+
+            &-main {
                 // height: 220px;
                 width: 94%;
                 margin: auto;
                 background: #fffaf8;
-                margin-bottom:10px; 
-                &-clothes{
+                margin-bottom: 10px;
+
+                &-clothes {
                     text-align: center;
-                    img{
+                    min-height: 135px;
+                    img {
                         width: 70%;
-                        margin:10px auto;
+                        margin: 10px auto;
                     }
                 }
-                &-title{
+
+                &-title {
                     padding: 0 10px;
                     font-size: 12px;
                     line-height: 18px;
@@ -216,56 +255,88 @@
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 2;
                     overflow: hidden;
-                    i{
+
+                    i {
                         background: #fe7537;
                         color: #fff;
-                        
+
                         padding: 1px 4px;
-                        border-radius:  16px;
-                        margin-right:4px; 
+                        border-radius: 16px;
+                        margin-right: 4px;
                     }
                 }
-                &-price{
+
+                &-price {
                     font-size: 16px;
                     color: #fe7537;
-                    padding:6px 10px;
+                    padding: 6px 10px;
                     height: 30px;
-                    .price{
+
+                    .price {
                         float: left;
                     }
-                    .add-shopcar{
+
+                    .add-shopcar {
                         float: right;
                     }
                 }
             }
         }
     }
-    .bp-hot{
-        &-link{
+
+    .bp-hot {
+        &-link {
             height: 20px;
-            &-left{
+
+            &-left {
                 float: left;
                 left: 80px;
                 width: 50%;
-                img{
+
+                img {
                     height: 20px;
                 }
             }
-            &-right{
+
+            &-right {
                 float: right;
                 font-size: 14px;
                 margin-right: 10px;
-                span{
+
+                span {
                     position: relative;
                     right: -8px;
                     top: -6px;
                 }
             }
         }
-        &-list{
+
+        &-list {
             width: 92%;
             margin: auto;
-            img{width: 100%}
+
+            img {
+                width: 100%
+            }
+
+            .hotTitle {
+                width: 100%;
+                margin: 10px 0;
+                
+            }
+            .hotprice{
+                text-align: center;
+                font-size: 16px;
+                padding: 5px;
+            }
+
         }
+
+    }
+
+    .bp-Sep {
+        height: 20px;
+        background: #fff2ec;
+        margin-top:10px;
     }
 }
