--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,7 @@
 html,body,#app{
     width: 100%;
     height: 100%;
-    -webkit-tap-highlight-color:rgba(0,0,0,0)
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
   }
   
   body,
@@ -124,4 +124,18 @@ html,body,#app{
   
   .csp-icon-home::before {
     content: '\&#xf0178;';
+  }
+  .van-nav-bar{
+      background: linear-gradient(top,#fd626b,#fe8f6d);
+
+      .van-nav-bar__title{
+        color: #fff;
+      }
+      .van-nav-bar .van-icon{
+          color: #fff
+      }
+      .van-nav-bar__arrow{
+          font-size: 20px;
+          color: #fff;
+      }
   }
